Closed
Bug 261098
Opened 21 years ago
Closed 20 years ago
[Mac Only] Unable to open links in mail messages
Categories
(SeaMonkey :: MailNews: Message Display, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: marcia, Assigned: peterv)
Details
Attachments
(1 file)
1.41 KB,
patch
|
neil
:
review+
Bienvenu
:
superreview+
dbaron
:
approval1.8a4+
|
Details | Diff | Splinter Review |
Seen on Mozilla 1.8a4
Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8a4) Gecko/20040922
STR:
1. Click on any http link in a mail message. Nothing happens.
2. Right click to get context menu and open in new window or new tab - nothing
happens.
I get this error in the JS Console:
Error: uncaught exception: [Exception... "Component returned failure code:
0xbfffcd30 [nsIDOMLocation.href]" nsresult: "0xbfffcd30 (<unknown>)" location:
"JS frame :: chrome://communicator/content/contentAreaUtils.js ::
getContentFrameURI :: line 71" data: no]
Updated•21 years ago
|
Summary: Unable to open links in mail messages [Mac Only] → [Mac Only] Unable to open links in mail messages
Updated•21 years ago
|
Flags: blocking1.8a4? → blocking1.8a4+
Reporter | ||
Comment 2•21 years ago
|
||
Adding bienvenu and Neil to this bug. Any chance we can get some traction on
this? We are trying to get 1.8a4 shipped in the next few days
Comment 3•21 years ago
|
||
CC'ing someone who might figure out what that error code means
Comment 4•21 years ago
|
||
Hmm, I'm unable to figure out what that error code would map to. Unless I
screwed up in my logic, the module code in that error is 8122 (0x1fba), but I
can't find an error modeule with that value in mozilla code... Someone with a
mac debugger would need to step through this code and see what's going on here...
Reporter | ||
Comment 5•21 years ago
|
||
Interestingly enough, when tracy and i were looking at today's build, we did
notice that the links on the Mail Start page do work. But any bugzilla links and
send page links do not work - clicking on them does nothing and no way to get at
them via the context menu.
I am going back through the builds to try to narrow the frame of when this might
have happened.
Reporter | ||
Comment 6•21 years ago
|
||
I was able to trek back through the trunk builds and determined that this broke
in the 20040819 build - it was working in the build on 20040818.
Reporter | ||
Comment 7•21 years ago
|
||
Here is the Bonsai query of who checked in:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=MozillaTinderboxAll&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2004-08-18&maxdate=2004-08-19&cvsroot=%2Fcvsroot
If possible, can the people who are cc'd on this bug look thru the checkins to
see what might have caused the bustage? Adding relevant parties to the bug.
Reporter | ||
Comment 8•21 years ago
|
||
(In reply to comment #6)
> I was able to trek back through the trunk builds and determined that this broke
> in the 20040819 build - it was working in the build on 20040818.
Just to clarify, both the links not working and attachments not showing
(Bugzilla 261063) are both broken in this build. Possibly related?
Assignee | ||
Comment 9•20 years ago
|
||
This is a result from the checkin for bug 41929. nsImapService::GetServerFromUrl
doesn't initialize rv before using it if !folderName.IsEmpty(). The error
trickles back all the way to the security manager which blocks the load. Over to
Neil.
Assignee: sspitzer → neil.parkwaycc.co.uk
Assignee | ||
Comment 10•20 years ago
|
||
Actually I'll take it. Trivial fix and Neil was just the checkin buddy anyway.
Assignee: neil.parkwaycc.co.uk → peterv
Status: NEW → ASSIGNED
Assignee | ||
Updated•20 years ago
|
Attachment #160049 -
Flags: superreview?(bienvenu)
Attachment #160049 -
Flags: review?(neil.parkwaycc.co.uk)
Comment 11•20 years ago
|
||
Comment on attachment 160049 [details] [diff] [review]
v1
I tested this by initializing rv to NS_ERROR_FAILURE at which point my links
stopped working, and this fixed it.
Attachment #160049 -
Flags: review?(neil.parkwaycc.co.uk) → review+
Comment 12•20 years ago
|
||
Comment on attachment 160049 [details] [diff] [review]
v1
thx, Peter
Attachment #160049 -
Flags: superreview?(bienvenu) → superreview+
Assignee | ||
Comment 13•20 years ago
|
||
Comment on attachment 160049 [details] [diff] [review]
v1
Trivial fix for a a4 blocker.
Attachment #160049 -
Flags: approval1.8a4?
Attachment #160049 -
Flags: approval1.8a4? → approval1.8a4+
Assignee | ||
Updated•20 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 14•20 years ago
|
||
verified fixed on Mac with 2004-09-27-16-trunk (seamonkey)
Status: RESOLVED → VERIFIED
Updated•20 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•