Fix for bug 261098 ([Mac Only] Unable to open links in mail messages). r=neil, sr=bienvenu, a=dbaron.